--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Tim Carlson (dotcarls@indiana.edu)",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.13.3",
     "socket.io": "^1.3.6"
   }
 }
